<resources>
    <string name="font_roboto_condensed">sans-serif-black</string>
    <string name="font_roboto_condensed_light">sans-serif-light</string>
    <string name="all_about">About</string>
    <string name="all_calculating">Calculating</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_complete">Complete</string>
    <string name="all_confirm">Confirm</string>
    <string name="all_connect">Connect</string>
    <string name="all_control">Control</string>
    <string name="all_delete">Delete</string>
    <string name="all_disconnect">Disconnect</string>
    <string name="all_done">Done</string>
    <string name="all_failed">Failed</string>
    <string name="all_language">Language</string>
    <string name="all_load">Load</string>
    <string name="all_next">Next</string>
    <string name="all_on">On</string>
    <string name="all_off">Off</string>
    <string name="all_ok">OK</string>
    <string name="all_pause">Pause</string>
    <string name="all_print">Print</string>
    <string name="all_resume">Resume</string>
    <string name="all_save">Save</string>
    <string name="all_start">Start</string>
    <string name="all_stop">Stop</string>
    <string name="all_unload">Unload</string>
    <string name="all_update">Update</string>
    <string name="all_warning">Warning</string>
    <string name="all_yes">Yes</string>
    <string name="all_quit">Quit</string>
    <string name="all_agree">Agree</string>
    <string name="all_calibrate">Calibrate</string>
    <string name="all_calibration">Calibration</string>
    <string name="all_camera">Camera</string>
    <string name="all_congratulations">Congratulations</string>
    <string name="all_continue">Continue</string>
    <string name="all_down">Down</string>
    <string name="all_edit">Edit</string>
    <string name="all_enclosure">Enclosure</string>
    <string name="all_experiment">Experiment</string>
    <string name="all_factory">Factory</string>
    <string name="all_finish">Finish</string>
    <string name="all_general">General</string>
    <string name="all_guides">Guides</string>
    <string name="all_hello">Hello</string>
    <string name="all_move">Move</string>
    <string name="all_no">No</string>
    <string name="all_notification">Notification</string>
    <string name="all_skip">Skip</string>
    <string name="all_preview">Preview</string>
    <string name="all_ready">Ready</string>
    <string name="all_reconnect">Reconnect</string>
    <string name="all_recover">Recover</string>
    <string name="all_rename">Rename</string>
    <string name="all_return">Return</string>
    <string name="all_offset">Offset</string>
    <string name="all_settings">Settings</string>
    <string name="all_up">Up</string>
    <string name="all_wifi">Wi-Fi</string>
    <string name="all_retry">Retry</string>
    <string name="all_capture">Capture</string>
    <string name="all_measure">Measure</string>
    <string name="all_tool">Tool</string>
    <string name="all_3d_printing">3D Printing</string>
    <string name="all_3d_printing_dual_extruder">3D Printing Dual Extruder</string>
    <string name="all_cnc">CNC</string>
    <string name="all_cnc_200w">CNC 200W</string>
    <string name="all_laser">Laser</string>
    <string name="all_10w_laser">10W Laser</string>
    <string name="all_laser_height">Laser Height</string>
    <string name="all_rotary_module">Rotary Module</string>
    <string name="all_linear_module">Linear Module</string>
    <string name="all_emergency_stop">Emergency Stop</string>
    <string name="all_safety_goggles">Safety Goggles</string>
    <string name="all_air_purifier">Air Purifier</string>
    <string name="all_manual_mode">Manual Mode</string>
    <string name="all_touch_material_title">Touch Material</string>
    <string name="dry_box_module">Dry Box</string>
    <string name="number_0_1">0.1</string>
    <string name="number_0_3">0.3</string>
    <string name="number_1">1</string>
    <string name="number_3">3</string>
    <string name="number_10">10</string>
    <string name="app_name">FabScreen</string>
    <string name="todo">TODO</string>
    <string name="debug">debug</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholder_long">Placeholder-Placeholder-Placeholder-123</string>
    <string name="all_0_1mm">0.1 mm</string>
    <string name="all_1mm">1 mm</string>
    <string name="all_10mm">10 mm</string>
    <string name="air_purifier_fan_power">Power</string>
    <string name="air_purifier_fan_speed">Fan Speed</string>
    <string name="air_purifier_filter_life">Filter Life</string>
    <string name="all_low">Low</string>
    <string name="all_medium">Medium</string>
    <string name="all_High">High</string>
    <string name="control_run_boundary">Run Boundary</string>
    <string name="all_settings_join">Join the</string>
    <string name="all_settings_user_experience_program">  <u>User Experience Improvement Program</u></string>
    <string name="j1_settings_terms_content"><b>Privacy Policy</b>
    \n\nThank you for choosing the products and services of Shenzhen Snapmaker Technologies Co., Ltd. (hereinafter referred to as “we” or “us”).
     \nYour privacy is critically important to us. Our privacy policy is designed to enhance transparency and help you understand our privacy safeguards in a format that is easy to read and browse. Please read the following sections to learn how we obtain, process, share, and protect your information in order to provide you with a seamless product experience. You do not have to agree to this Privacy Policy, but if you choose not to agree to this Privacy Policy, we will not be able to provide you with our products or services in full.
    \n\n<b>Information We May Collect</b>
        \n\n<b>1. Basic Device Information</b>
        \n&#160;&#160;&#160;&#160;•	How we collect information
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;Basic device information (i.e., machine name, model name, and firmware version information; connection status: hardware communication connection status, and status of telecommunication with Snapmaker Luban; screen operation information; and firmware logs and error messages) is stored locally in log files on your device, <b>which we cannot access unless you provide them to us voluntarily</b>. In some cases, you may need to send such log files to us by email or otherwise for us to provide relevant support.
        \n&#160;&#160;&#160;&#160;•	Types and purposes of information
        \n&#160;&#160;&#160;&#160;&#160;&#160;To ensure the normal operation of the machine and an excellent service experience, we may obtain the following information from the log files you provide:
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;1. Machine name, model name, and firmware version information, for purposes such as establishing telecommunication and updating firmware.
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;2. Connection status: hardware communication connection status and status of telecommunication with Snapmaker Luban, for the purpose of checking the connection status of the machine and promptly reporting exceptions (if any).
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;3. Screen operation information, for the purpose of recording your current location on the page and status, so as to help you quickly restore normal operation when exceptions occur.
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;4. Firmware logs and error messages, for the purpose of locating the problem when you do not have the relevant failure detection conditions.
        \n\n<b>2. Personalized Device Information</b>
        \nFor the information we obtain after you have chosen and expressly agreed to participate in the User Experience Improvement Program, please refer to the <b>User Experience Improvement Program</b>.
        \n\n<b>How We Process Information Obtained</b>
        \n\n• Use
        \n&#160;&#160;Subject to applicable laws and administrative regulations, we may use the information we obtain for:
        \n&#160;&#160;•	analyzing the operation status of the machine.
        \n&#160;&#160;• performing the contract signed with you (our terms of use or other contracts) to ensure the normal use of products and provide complete after-sales services.
        \n&#160;&#160;• providing support for our services, including product or service improvement, fault analysis, and problem diagnosis.
        \n\n• Retention
        \n&#160;&#160;We retain your information to provide you and other users with better services. Our goal is to retain the information you provide only for the time necessary to achieve the purposes specified and within the retention period specified by laws and administrative regulations. When determining the retention period, we will carefully evaluate the necessity of data collection, the type of data collected, the relevant legal framework, and the limitation of action.
        \n\n<b>How You Manage Information You Provide</b>
        \n\nWe respect and protect your rights in the information you have provided, and you have the right to access, correct, update, or delete the information you have provided, and the right to object, on grounds relating to your particular situation, to the processing of such information. When we process information with your consent, you may also change the scope of your authorization or consent or withdraw your consent. If you change the scope of authorization or consent or withdraw your consent, it will not affect the legitimacy of our processing of authorized information up until the time of such change or withdrawal.
        \n\nHowever, please note that if you exercise the right to delete or the right to object to the processing of your information, or change the scope of your authorization or consent or withdraw your consent, we may not be able to provide you with all or part of the features and functions of our products or services.
        \n\nIf you wish to exercise any of the rights as mentioned in this section or provided by applicable law, you may contact us at <b>support@snapmaker.com</b>.
        \n\n<b>How We Share and Protect Information Obtained</b>
        \n\n• Sharing
        \n&#160;&#160;We will not voluntarily share your information with other companies, organizations or individuals unless we obtain your express consent. We may share your information with a third party as required by laws and regulations, as needed for litigation dispute resolution, or as requested by administrative or judicial authorities in accordance with the law. We do not share your information with third parties for their marketing purposes.
        \n\n• Protection
        \n&#160;&#160;We use administrative, technical, and physical safeguards to protect your information. However, due to technical limitations and possible malicious means, please understand that we cannot guarantee that there is no security risk despite all these efforts. We will continue to improve these security measures and do our best to keep your personal information secure at all times.
        \n\n<b>Privacy of Minors</b>
        \n\nWe treat anyone under the age of 18, or any other age prescribed by local laws, as a minor. Minors shall use our products under the escort and supervision of adults. The information we may obtain is only related to the machine, so we will not obtain the personal information of minors.
         \n\n<b>Changes to this Privacy Policy</b>
        \n\nWe reserve the right to modify or update this Privacy Policy, and will inform you of any changes to this Privacy Policy through this interface.
        \n\n<b>Contact Us</b>
        \n\nIf you have any questions, comments or suggestions about this Privacy Policy, please contact us at <u>support@snapmaker.com</u>
        \n\nLast updated: December, 2022
        \n
    </string>
    <string name="all_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>