<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/AppTheme.TextTitlePrimary"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="?attr/theme_spacing5"
        android:layout_marginEnd="?attr/theme_spacing5"
        android:gravity="center_vertical"
        android:text="@string/all_terms_and_conditions"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_bg_section_detail_normal"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@drawable/all_drawable_scrollbar_thumb_vertical"
        app:layout_constraintBottom_toTopOf="@id/v_bottom"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            style="@style/AppTheme.TextExplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="@dimen/margin_layout_16"
            android:paddingEnd="@dimen/margin_layout_16"
            android:text="@string/j1_settings_terms_content"
            android:textColor="@color/palette_grey_french" />

    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/AppTheme.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@id/v_bottom"
        app:layout_constraintStart_toStartOf="@id/v_bottom"
        app:layout_constraintTop_toTopOf="@id/v_bottom" />

    <TextView
        android:id="@+id/tv_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/checkBox"
        android:text="@string/all_settings_join"
        android:textColor="?attr/theme_color_body_primary"
        android:textSize="?attr/theme_font_size_body1"
        app:layout_constraintBottom_toBottomOf="@id/checkBox"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/tv_experience_program"
        app:layout_constraintTop_toTopOf="@id/checkBox" />

    <TextView
        android:id="@+id/tv_experience_program"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:text="@string/all_settings_user_experience_program"
        android:textColor="?attr/theme_color_primary"
        android:textSize="?attr/theme_font_size_body1"
        app:layout_constraintBottom_toBottomOf="@id/checkBox"
        app:layout_constraintStart_toEndOf="@id/tv_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBox" />
</androidx.constraintlayout.widget.ConstraintLayout>
